Update Getting Params