@@ -3,6 +3,7 @@ package com.fan.dishsystem.controller;
 import com.fan.dishsystem.pojo.Ingredient;
 import com.fan.dishsystem.service.DishService;
 import com.fan.dishsystem.utils.Response;
+import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,6 +15,7 @@ import java.lang.reflect.Field;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
@@ -52,32 +54,20 @@ public class DishController {
      * @description: 添加菜品
      * @date: 2023/1/1 23:04
      */
-    public ResponseEntity<Response> addDish(@RequestParam Map<String, Object> form) {
+    public ResponseEntity<Response> addDish(@RequestParam Map<String, Object> form,
+                                            @RequestParam(value = "ingredients") List<String> ingredientList) {
         String dishName = form.get("dishName").toString();
         String description = form.get("description").toString();
         String photoUrl = form.get("photoUrl").toString();
         String position = form.get("position").toString();
 
-        Map<String, Integer> preferenceMap = new HashMap<>();
-        Object preferenceObject = form.get("preference");
-        Class<?> preferenceObjectClass = preferenceObject.getClass();
-        Field[] fields = preferenceObjectClass.getDeclaredFields();
-        for (Field field : fields) {
-            field.setAccessible(true);
-            String fieldName = field.getName();
-            Object fieldValue = null;
-            try {
-                fieldValue = field.get(preferenceObject);
-            } catch (IllegalAccessException e) {
-                e.printStackTrace();
-            }
-            if (fieldValue instanceof Integer) {
-                preferenceMap.put(fieldName, (Integer) fieldValue);
-            }
+        Map<String, Object> preferenceMap = new HashMap<>();
+        JSONObject jsonObject = new JSONObject(form.get("preference").toString());
+        for (String key : jsonObject.keySet()) {
+            preferenceMap.put(key, jsonObject.get(key));
         }
-
-        List<Ingredient> ingredients = Stream.of(form.get("ingredients"))
-                .map(obj -> new Ingredient(obj.toString())).toList();
+        List<Ingredient> ingredients = ingredientList.stream()
+                .map(Ingredient::new).collect(Collectors.toList());
         return ResponseEntity.ok(dishService.addDish(dishName, description, photoUrl, position, preferenceMap, ingredients));
     }
 }
